fix(siswa): refactoring UjianServiceImplementation